<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/btn_enable_ime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_enable_ime"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_pick_ime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_pick_ime"
        android:focusable="true" />

    <Button
        android:id="@+id/btn_start_wizard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_start_wizard"
        android:focusable="true" />

</LinearLayout>
